			       =================
				BOGOFILTER NEWS
			       =================


NOTE: A terse version of important changes for updaters are in the
RELEASE.NOTES files!


$Id$

       2003-08-03

	* Merged trio 1.10 (http://ctrio.sourceforge.net/) to support
	  compilation on ancient systems (Solaris 2.5) that do not have
	  [v]snprintf functions.
	  Trio is Copyright (C) 1998-2000 Bjorn Reese and Daniel Stenberg.

0.14.2 2003-08-02

	* Replaced use of memcpy() by memmove() in an input routine. The
	  overlapping copy migh cause data corruption on some systems.
	* Fixed "make check" failures for bogoutil introduced with the
	  "combined wordlist" feature in 0.14.0. There has been a buffer
	  overflow. All users of bogofilter with combined wordlist prior to
	  0.14.2 are advised to upgrade.
	* Fixed bogus "t.valgrind" test FAILures.
	* Fixed uninitialized data in db_get_dbvalue(), for split word lists.
	* New file, contrib/vm-bogofilter.el, provides an interface
	  between the VM mail reader and bogofilter."
	* Revised lexer_v3.l for compatibility with flex-2.5.31
	* Break up long line in regression test input for Solaris 2.5
	  compatibility.

0.14.1.1 2003-08-01

	* Fixed check for adding spam_subject_tag to Subject: line.
	* Updated French version of FAQ.

	2003-07-31

	* Correct problem with t.degen regression test.

0.14.1	2003-07-31

	* Updated English version of FAQ.

	2003-07-29

	* Initial release of token degeneration code.

	2003-07-25

	* Revised lexer pattern to better recognize encoded tokens.

	2003-07-24

	* Implemented named exitcodes, with Unsure having its own
	  value (2) and changing the value for error from 2 to 3.

0.14.0.1 2003-07-23

	* Fix problem with encoded text.
	* Fix handling of absolute paths.
	* Fix defect in base64 decoding that can cause segfaults.
	* Bogoutil now complains before exiting when it can't open a
	  file.
	* Updated bogominitrain.pl to work with combined wordlists.

0.14.0	2003-07-22
